# stock

./: .env.example  .gitignore  README.md  docker-compose.yml  pyproject.toml  start_system.command  stop_system.command  streamlit_app.py
app/: __init__.py
app/api/: main.py
app/core/: config.py  prompts.py  time.py
app/data_sources/: company_filings.py  market.py  news.py
app/db/: __init__.py  models.py  session.py  status.py
app/models/: schemas.py
app/rag/: vector_store.py
app/services/: candidate_audit.py  candidate_confidence.py  company_data_audit.py  entity_mapping.py  followup_actions.py  ingestion.py  leading_signals.py  llm_analysis.py  llm_client.py  persistence.py  report_generator.py  report_integrity.py  report_quality.py  risk_analyzer.py  schedule_config.py  service_status.py  (+3 more)
data/: ai_supply_chain_whitelist.json  news_sources.json  schedule_config.json
scripts/: security_scan.py  start_system.py  stop_system.py
tests/: test_analysis_runs.py  test_api_tasks.py  test_candidate_confidence.py  test_celery_tasks.py  test_company_data_audit.py  test_company_filings.py  test_compose_config.py  test_db_status.py  test_entity_mapping.py  test_followup_actions.py  test_ingestion.py  test_llm_client.py  test_maintenance.py  test_market_data.py  test_news_feed.py  test_persistence.py  test_readme_docs.py  test_report_generator.py  test_report_integrity.py  test_risk_analyzer.py  test_schedule_config.py  test_security_scan.py  test_service_status.py  test_session.py  test_source_relevance.py  test_streamlit_report_html.py  test_topic_discovery.py
(+6 files in other folders)
