[project]
name = "taiwan-ai-supply-chain-rag"
version = "0.1.0"
description = "AI industry-chain Taiwan equities analysis and automated report generation MVP."
requires-python = ">=3.9"
dependencies = [
  "beautifulsoup4>=4.12.3",
  "celery>=5.4.0",
  "chromadb>=0.5.20",
  "fastapi>=0.115.0",
  "httpx>=0.27.2",
  "pandas>=2.2.3",
  "psycopg[binary]>=3.2.0",
  "pydantic>=2.9.2",
  "pydantic-settings>=2.6.1",
  "pypdf>=5.0.0",
  "python-dotenv>=1.0.1",
  "redis>=5.2.0",
  "requests>=2.32.3",
  "sqlalchemy>=2.0.36",
  "streamlit>=1.40.0",
  "uvicorn>=0.32.0"
]

[project.optional-dependencies]
dev = [
  "pytest>=8.3.3",
  "pyyaml>=6.0.0",
  "ruff>=0.7.4"
]

[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
include = ["app*"]

[tool.pytest.ini_options]
pythonpath = ["."]
testpaths = ["tests"]

[tool.ruff]
line-length = 100
target-version = "py311"
